<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addedit.AddEditContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/contact_edit_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contact_picture"
                android:adjustViewBounds="true"
                android:maxHeight="160dp"
                android:src="@drawable/ic_person" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/contact_edit_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:layout_marginHorizontal="8dp"
                    android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
                    android:hint="@string/contact_name_hint"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />

                <CheckBox
                    android:id="@+id/contact_edit_fav"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@drawable/checkbox_selector"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contact_phone"
                    android:src="@drawable/ic_contact_phone" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/contact_edit_phone_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="AUTOFILL_HINT_PHONE_NUMBER"
                        android:drawableStart="@drawable/ic_home"
                        android:hint="@string/contact_phone_home"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/contact_edit_phone_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="AUTOFILL_HINT_PHONE_NUMBER"
                        android:drawableStart="@drawable/ic_work"
                        android:hint="@string/contact_phone_work"
                        android:inputType="phone" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contact_email"
                    android:src="@drawable/ic_contact_email" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/contact_edit_email_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
                        android:drawableStart="@drawable/ic_home"
                        android:hint="@string/contact_email_home"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/contact_edit_email_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
                        android:drawableStart="@drawable/ic_work"
                        android:hint="@string/contact_email_work"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/contact_fab_save"
        android:src="@drawable/ic_check" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>